After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646041 - panel: Fix moving of panel objects to use switch mode again by default
panel: Fix moving of panel objects to use switch mode again by default
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
unspecified
Other All
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-29 06:34 UTC by Vincent Untz
Modified: 2011-03-29 07:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
panel: Fix moving of panel objects to use switch mode again by default (2.32 KB, patch)
2011-03-29 06:34 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2011-03-29 06:34:42 UTC
See patch.
Comment 1 Vincent Untz 2011-03-29 06:34:44 UTC
Created attachment 184527 [details] [review]
panel: Fix moving of panel objects to use switch mode again by default

We were looking at the modifier on the panel, and this was set to Alt,
since this is required to open the context menu. So we always used the
free move mode by default, and this could easily break in weird ways
later on. And we really want the switch mode.

So instead, take the modifier from the event triggering the move.
Comment 2 Vincent Untz 2011-03-29 07:54:41 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.